--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
-name: phonecallstate
+name: phonecallstate_kin
 description: Flutter plugin to receive Phone Call State for both iOS and Android. With phone number as args, both for incoming and outcoming calls.
 version: 1.0.2
 authors: [Özcan Esnaf <ozcan.esnaf@gmail.com>, Yerassyl Maikhanov <maihanov96@gmail.com>, 韩雷 <hanlei9257@163.com>]
+repository: https://github.com/yeras-is/flutter-phonecallstate
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
