--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,3 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   permission_handler: ^5.0.1+1
+
+
+flutter:
+  plugin:
+    androidPackage: com.plusdt.phonecallstate
+    pluginClass: PhonecallstatePlugin
